pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: policy-test-pod
  namespace: stackrox
spec:
  containers:
    - name: test-container
      image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
      command: [ "/bin/bash","-c","cat /var/policies/policy.json" ]
      volumeMounts:
      - name: config-volume
        mountPath: /var/policies/
  volumes:
    - name: config-volume
      configMap:
        name: policy-gitops
  restartPolicy: Never
