secure-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: secure-central
  namespace: stackrox
spec:
  to:
    kind: Service
    name: central
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: ''
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIB0zCCAXigAwIBAgIUGcXmKDvcNin6q/dmknq6GW3HmM4wCgYIKoZIzj0EAwIw
[...]
      chgp1QIhAJbetfHfxdlDZyFUL9HAJis2ngWcwrE/pS/a9Z/LY/S2
      -----END CERTIFICATE-----
  port:
    targetPort: https
  alternateBackends: []
